print functionality, fixed issues on truncated data

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -382,7 +382,15 @@ body.offcanvas-active .navbar-nav{
     word-break: break-all;
 }
 
+#print table tr td svg{
+    width: 230px !important;
+}
+
 @media print{
+    #print{
+        display: block !important;
+    }
+
     #reading, .nav-mobile{
         display: none;
     }
